<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    tools:context=".MainActivity"
                                    android:background="#000000"
                                    android:weightSum="12"
                                    android:orientation="vertical">
                                    <EditText
                                        android:id="@+id/data"
                                        android:layout_width="match_parent"
                                        android:layout_height="90dp"
                                        android:layout_weight="1"
                                        android:inputType="number"
                                        android:autofillHints=""
                                        android:textColor="@color/white"
                                        android:textSize="40sp"
                                        android:background="#1C1C1C"
                                        android:hint="@string/input"/>

                                    <TextView
                                        android:id="@+id/ans"
                                        android:layout_width="match_parent"
                                        android:layout_height="90dp"
                                        android:layout_weight="1"
                                        android:background="#090909"
                                        android:gravity="top|end"
                                        android:text="@string/output"
                                        android:textColor="@color/white"
                                        android:textSize="40sp" />
    <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:orientation="vertical"
                                            android:background="#373535"
                                            android:layout_weight="10"
                                            >
        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:orientation="horizontal">
            <Button
                                            android:id="@+id/shift"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:background="@drawable/ripple_circle"
                                            android:text="@string/shift"
                                            android:textColor="@color/white"
                                            android:textSize="27sp"
                                            style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                android:id="@+id/alpha"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:background="@drawable/ripple_circle"
                                                android:text="@string/Alpha"
                                                android:textColor="@color/white"
                                                android:textSize="27sp"
                                                style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                android:id="@+id/menu"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:background="@drawable/ripple_circle"
                                                android:text="@string/setup"
                                                android:textColor="@color/white"
                                                android:textSize="27sp"
                                                style="?android:attr/buttonBarButtonStyle">
            </Button>

            <Button
                                                android:id="@+id/on"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:background="@drawable/ripple_circle"
                                                android:text="@string/on"
                                                android:textColor="@color/white"
                                                android:textSize="27sp"
                                                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>
        <LinearLayout
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:orientation="horizontal"
                                                    android:layout_margin="8sp">
            <Button
                                                            android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            android:id="@+id/x_square"
                                                            android:background="@drawable/ripple_effect"
                                                            android:text="@string/pow"
                                                            android:textColor="@color/white"
                                                            android:textSize="30sp"
                                                            style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/x_fac"
                                                        android:background="@drawable/ripple_effect"
                                                        android:text="@string/fac"
                                                        android:textColor="@color/white"
                                                        android:textSize="30sp"
                                                        style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/log_10"
                                                        android:background="@drawable/ripple_effect"
                                                        android:text="@string/logarithm"
                                                        android:textColor="@color/white"
                                                        android:textSize="30sp"
                                                        style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                        android:layout_width="match_parent"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/x_log_e"
                                                        android:background="@drawable/ripple_effect"
                                                        android:text="@string/ln"
                                                        android:textColor="@color/white"
                                                        android:textSize="30sp"
                                                        style="?android:attr/buttonBarButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:orientation="horizontal"
                                                android:layout_margin="8sp">

            <Button
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/sin_calc"
                                                    android:background="@drawable/ripple_effect"
                                                    android:text="@string/sine"
                                                    android:textColor="@color/white"
                                                    android:textSize="30sp"
                                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/cos_calc"
                                                    android:background="@drawable/ripple_effect"
                                                    android:text="@string/cosine"
                                                    android:textColor="@color/white"
                                                    android:textSize="30sp"
                                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/tan_calc"
                                                    android:background="@drawable/ripple_effect"
                                                    android:text="@string/tan"
                                                    android:textColor="@color/white"
                                                    android:textSize="30sp"
                                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/sto_d"
                                                    android:background="@drawable/ripple_effect"
                                                    android:text="@string/s_d"
                                                    android:textColor="@color/white"
                                                    android:textSize="27sp"
                                                    style="?android:attr/buttonBarButtonStyle">
            </Button>

        </LinearLayout>
        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                               >
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/Seven"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/seven"
                                    android:textColor="@color/white"
                                    android:textSize="30sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/Six"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/eight"
                                    android:textColor="@color/white"
                                    android:textSize="30sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/Nine"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/nine"
                                    android:textColor="@color/white"
                                    android:textSize="30sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/delete"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/delete"
                                    android:textColor="@color/white"
                                    android:textSize="28sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/a_c"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/ac_word"
                                    android:textColor="@color/white"
                                    android:textSize="28sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
        </LinearLayout>
        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                               >

            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/Four"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/four"
                                    android:textColor="@color/white"
                                    android:textSize="30sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/Five"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/five"
                                    android:textColor="@color/white"
                                    android:textSize="30sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/six"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/six"
                                    android:textColor="@color/white"
                                    android:textSize="30sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/multiply"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/multiply"
                                    android:textColor="@color/white"
                                    android:textSize="27sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
            <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:id="@+id/divide"
                                    android:background="@drawable/ripple_effect"
                                    android:text="@string/divide"
                                    android:textColor="@color/white"
                                    android:textSize="30sp"
                                    style="?android:attr/buttonBarButtonStyle">
            </Button>
        </LinearLayout>
</LinearLayout>
</LinearLayout>



